Fix menu z-index

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -32,6 +32,7 @@
       &:hover {
         .dropdown-menu {
           @apply block;
+          @apply z-10;
         }
       }
     }
